--- a/finalProject2 2/app/src/main/AndroidManifest.xml
+++ b/finalProject2 2/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".GeneraltvShows"></activity>
+        <activity android:name=".GeneraltvShows" />
         <activity android:name=".rmQuiz" />
         <activity android:name=".splashScreen">
             <intent-filter>
