--- a/finalProject2 2/app/src/main/AndroidManifest.xml
+++ b/finalProject2 2/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".movieActivity"></activity>
         <activity android:name=".GeneraltvShows" />
         <activity android:name=".rmQuiz" />
         <activity android:name=".splashScreen">
